server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sever-deployment
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: server
  template:
    metadata:
      name: server-pods
      labels:
        app: server
    spec:
      containers: 
        - name: server
          image: dekcode/todo-api:v5

---

apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: ClusterIP
  selector: 
    app: server
  ports: 
    - port: 80
      targetPort: 80
